# zebra

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE.txt  README  README-CICD.md  README.md  TODO.md  conftest.py  design.md  docker-compose.yml  pom.xml  pyproject.toml  version.json
zebra-agent/: AGENTS.md  DESIGN.md  DESIGN_FULL.md  README.md  pyproject.toml
zebra-agent-cli/: AGENTS.md  README.md  pyproject.toml
zebra-agent-cli/tests/: __init__.py  conftest.py  test_main.py
zebra-agent-cli/zebra_agent_cli/: __init__.py  main.py
zebra-agent-web/: AGENTS.md  README.md  manage.py  pyproject.toml
zebra-agent-web/fixtures/: values_taxonomy_seed.yaml
zebra-agent-web/fixtures/routines/: compact_memory.yaml  dream_cycle.yaml  goal_queue_tick.yaml
zebra-agent-web/static/js/: webauthn.js  workflow-diagram.js
zebra-agent-web/templates/: base.html
zebra-agent-web/templates/components/: stat_card.html
zebra-agent-web/templates/pages/: activity.html  auth_login.html  auth_setup.html  dashboard.html  ethics_audit.html  goal_processing.html  goal_result.html  human_task.html  in_progress_runs.html  knowledge_form.html  knowledge_list.html  pending_tasks.html  recent_runs.html  run_detail.html  run_goal.html  run_pending.html  setup.html  task_not_found.html  trust.html  workflow_detail.html  workflow_library.html
zebra-agent-web/templates/partials/: _nav_link.html  activity_list.html  goal_error.html  goal_processing.html  goal_result.html  human_task_complete.html  human_task_form.html  in_progress_runs_list.html  nav_item.html  pending_tasks_list.html  planning_concerns.html  recent_runs_list.html  workflow_diagram.html  workflow_library_list.html
zebra-agent-web/tests/: conftest.py  test_agent_loop_integration.py  test_diagram.py  test_human_tasks.py  test_kill_switch.py
zebra-agent-web/tests/e2e/: conftest.py  test_budget_exhaustion.py  test_golden_path.py  test_human_task_loop.py
zebra-agent-web/tests/e2e_live/: conftest.py  test_cli_integration.py
zebra-agent-web/tests/smoke/: conftest.py  test_live_smoke.py  test_smoke.py
zebra-agent-web/tests/unit/: conftest.py  test_auth.py  test_bootstrap_values_taxonomy.py  test_dashboard_trust.py  test_deletion.py  test_dilemma_escalation.py  test_django_profile_store.py  test_django_trust_store.py  test_ethics_audit_api.py  test_export.py  test_goals_helper.py  test_human_tasks.py  test_identity.py  test_kill_switch.py  test_observability.py  test_planning_concerns.py  test_trust_api.py  test_trust_page.py  test_user_id_namespacing.py  test_values_profile_models.py  test_values_profile_view.py  test_version.py  test_zebra_cli.py
zebra-agent-web/zebra_agent_web/: __init__.py  asgi.py  cli.py  diagram.py  e2e_settings.py  ethics_audit_store.py  knowledge_store.py  logging_config.py  memory_store.py  metrics_store.py  middleware.py  profile_store.py  routine_run_store.py  settings.py  storage.py  test_settings.py  trust_store.py  urls.py
zebra-agent-web/zebra_agent_web/api/: __init__.py  agent_engine.py  apps.py  auth_urls.py  auth_views.py  consumers.py  daemon.py  engine.py  (+13 more)
zebra-agent/tests/: __init__.py  conftest.py  test_budget.py  test_cli.py  test_credential_store.py  test_ethics_audit_store.py  test_ethics_workflow.py  test_ioc.py  test_knowledge.py  test_knowledge_lifecycle_e2e.py  test_knowledge_schedules.py  test_library.py  test_loop.py  test_memory.py  test_metrics.py  test_profile_store.py  test_registry.py  test_routine.py  test_routine_store.py  test_scheduler.py  test_scheduler_e2e.py  test_scheduler_loop.py  test_trust_store.py  test_values_profile_wizard.py
zebra-agent/workflows/: agent_main_loop.yaml  analyze_problem.yaml  answer_question.yaml  brainstorm.yaml  code_review.yaml  compact_memory.yaml  compute.yaml  create_goal.yaml  dream_cycle.yaml  file_operations.yaml  file_processor.yaml  knowledge_decay.yaml  knowledge_verification.yaml  memory_compact_long.yaml  memory_compact_short.yaml  resolve_contradiction.yaml  summarize_text.yaml  values_profile_wizard.yaml
zebra-agent/zebra_agent/: __init__.py  budget.py  cli.py  deletion.py  export.py  knowledge.py  library.py  logging_filters.py  loop.py  memory.py  metrics.py  oracle_memory.py  oracle_metrics.py  profile.py  scheduler.py
zebra-py/: .gitignore  AGENTS.md  README.md  pyproject.toml  workflows.md
zebra-py/tests/: __init__.py  test_actions.py  test_engine.py  test_engine_coverage.py  test_forms.py  test_full_coverage.py  test_loader.py  test_loader_coverage.py  test_mcp_tools.py  test_models.py  test_oracle_storage.py  test_performance.py  test_postgres_storage.py  test_property_serialization.py  test_recovery.py  test_registry.py  test_sqlite_storage.py  test_storage.py  test_task_metadata.py  test_workflow_patterns.py
zebra-py/zebra/: __init__.py  forms.py
zebra-rs/: CLAUDE.md  Cargo.toml  workflows.md
zebra-rs/src/: lib.rs
zebra-rs/tests/: test_engine.rs  test_performance.rs  test_workflow_patterns.rs
zebra-tasks/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
zebra-tasks/examples/: human_interaction_example.yaml
zebra-tasks/tests/: __init__.py  conftest.py  test_action_metadata.py  test_agent_actions.py  test_agent_loop_actions.py  test_anthropic_integration.py  test_consult_knowledge.py  test_ethics_gate.py  test_evaluator_optimizer_variant_python_exec.py  test_filesystem.py  test_flag_concerns.py  test_human_actions.py  test_llm_action.py  test_llm_providers.py  test_pricing.py  test_propose_trust_promotion.py  test_provider_coverage.py  test_queue_goal.py  test_record_dilemma_resolution.py  test_reversibility.py  test_selector_knowledge.py  test_subtasks.py  test_tasks_full_coverage.py  test_trust_gate.py  test_trust_gate_e2e.py  test_values_profile_actions.py  zebra_tasks_conf.py
zebra-tasks/zebra_tasks/: __init__.py
zebra-web/: README.md  manage.py  pyproject.toml
zebra-web/frontend/: package-lock.json  package.json  vite.config.ts
zebra-web/templates/: base.html
zebra-web/zebra_web/: __init__.py  asgi.py  cli.py  settings.py  urls.py
(+1580 files in other folders)
