[project]
name = "zebra-agent-cli"
version = "0.1.0"
description = "Interactive CLI for the Zebra Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Zebra Contributors" }]
keywords = ["workflow", "agent", "llm", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "zebra-agent",
    "zebra-workflow",
    "zebra-tasks[anthropic]",
]

[tool.uv.sources]
zebra-agent = { workspace = true }
zebra-workflow = { workspace = true }
zebra-tasks = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
zebra-agent = "zebra_agent_cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zebra_agent_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
