[project]
name = "zebra-workflow"
version = "0.1.0"
description = "A Python workflow engine for Claude AI orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ben Gidley" }
]
keywords = ["workflow", "orchestration", "ai", "claude", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29.0",
    "oracledb>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.25.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zebra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
