[project]
name = "zebra-tasks"
version = "0.1.0"
description = "Reusable task actions for the Zebra workflow engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zebra Contributors" }]
keywords = ["workflow", "tasks", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "zebra-workflow",
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.18", "openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zebra_tasks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
