[project]
name = "zebra-tasks"
version = "0.1.0"
description = "Reusable task actions for the Zebra workflow engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Zebra Contributors" }]
keywords = ["workflow", "tasks", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "zebra-workflow",
    "pydantic>=2.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "aiofiles>=23.0",
]

[tool.uv.sources]
zebra-workflow = { workspace = true }

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.18", "openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.entry-points."zebra.tasks"]
# LLM
llm_call = "zebra_tasks.llm.action:LLMCallAction"
# Subtasks
subworkflow = "zebra_tasks.subtasks.spawn:SubworkflowAction"
wait_subworkflow = "zebra_tasks.subtasks.wait:WaitForSubworkflowAction"
parallel_subworkflows = "zebra_tasks.subtasks.parallel:ParallelSubworkflowsAction"
# Filesystem
file_read = "zebra_tasks.filesystem.read:FileReadAction"
file_write = "zebra_tasks.filesystem.write:FileWriteAction"
file_copy = "zebra_tasks.filesystem.copy:FileCopyAction"
file_move = "zebra_tasks.filesystem.move:FileMoveAction"
file_delete = "zebra_tasks.filesystem.delete:FileDeleteAction"
file_search = "zebra_tasks.filesystem.search:FileSearchAction"
file_exists = "zebra_tasks.filesystem.info:FileExistsAction"
file_info = "zebra_tasks.filesystem.info:FileInfoAction"
directory_list = "zebra_tasks.filesystem.info:DirectoryListAction"
# Human interaction
data_entry = "zebra_tasks.human.data_entry:DataEntryAction"
data_display = "zebra_tasks.human.data_display:DataDisplayAction"
# Compute
python_exec = "zebra_tasks.compute.python_exec:PythonExecAction"
# Agent
workflow_selector = "zebra_tasks.agent.selector:WorkflowSelectorAction"
workflow_creator = "zebra_tasks.agent.creator:WorkflowCreatorAction"
metrics_analyzer = "zebra_tasks.agent.analyzer:MetricsAnalyzerAction"
workflow_evaluator = "zebra_tasks.agent.evaluator:WorkflowEvaluatorAction"
workflow_optimizer = "zebra_tasks.agent.optimizer:WorkflowOptimizerAction"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zebra_tasks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
